--- a/mbl-api/src/main/resources/application.properties
+++ b/mbl-api/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # spring.jpa.hibernate.ddl-auto=update
-spring.graphql.cors.allowed-origins=http://localhost:4200/
+# Access-Control-Allow-Origin: http://localhost:4200/
+# Access-Control-Allow-Methods: GET, POST, PUT, DELETE
