--- a/mbl-web/package.json
+++ b/mbl-web/package.json
@@ -21,6 +21,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webpack-dev-middleware": "^6.1.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
